Stuttery Audio Playing Live Stream
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
People
(Reporter: jamie, Assigned: padenot)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
dmeehan
:
approval-mozilla-release+
dmeehan
:
approval-mozilla-esr115+
|
Details | Review |
When playing back certain live MP3 streams in Firefox 115, the audio is garbled and unlistenable.
In particular, this occurs when Firefox tries to play back a fallback media file from an Icecast streaming server. The implementation in Icecast works in a simple fashion by concatenating MP3 frames but it makes no attempt to remove metadata.
Steps to reproduce:
- Play back an Icecast fallback stream - for example: https://uksoutha.streaming.broadcast.radio/firefox_test_fallback
- Compare to a reference audio player such as VLC
I've determined this bug was introduced in version 115 - playing back the above stream works correctly in 114. I can reproduce this bug on both macOS and Windows.
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•2 years ago
|
||
Can repro.
Regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=9fa4a7ae19238256fcd261c727ad2b08c6f1a4fd&tochange=b46c07780ebc4d7149fdba2fbf59c12dfc15c20a
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
| Assignee | ||
Comment 3•2 years ago
|
||
| Assignee | ||
Comment 4•2 years ago
|
||
Jamie, thanks for the report, and sorry for the bug, I've got a fix, we're probably going to ship this to release asap.
Mayank, thanks for the quick range and triaging!
Comment 6•2 years ago
|
||
| bugherder | ||
Comment 7•2 years ago
|
||
The patch landed in nightly and beta is affected.
:padenot, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox116towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 8•2 years ago
|
||
Comment on attachment 9342575 [details]
Bug 1841982 - Only mark packets as EOF if the stream size is known in the MP3TrackDemuxer. r?#media-playback-reviewers
Beta/Release Uplift Approval Request
- User impact if declined: Broken audio rendering on some high profile radio broadcast website
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is just an oversight and the fix is trivial. We're restoring to the behaviour we had in the previous release.
- String changes made/needed:
- Is Android affected?: Yes
Paul <padenot@mozilla.com>, thank you for getting this one fixed so fast!
I continue to be amazed at both how carefully engineered and robust audio capture/playback is in Firefox! It's well known in the broadcasting industry etc. that Firefox has the most reliable audio out of any browser :-)
| Reporter | ||
Comment 10•2 years ago
|
||
(Moments after my comment, my Nightly picked up today's build and I can confirm that indeed fixed it for me!)
Comment 11•2 years ago
|
||
Comment on attachment 9342575 [details]
Bug 1841982 - Only mark packets as EOF if the stream size is known in the MP3TrackDemuxer. r?#media-playback-reviewers
Approved for 116.0b3
Comment 12•2 years ago
|
||
Comment 13•2 years ago
|
||
| bugherder uplift | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 14•2 years ago
|
||
Verified as fixed in our latest Nightly and Beta 116.0b3 builds.
Comment 15•2 years ago
|
||
Comment on attachment 9342575 [details]
Bug 1841982 - Only mark packets as EOF if the stream size is known in the MP3TrackDemuxer. r?#media-playback-reviewers
Approved for 115.0.2
Approved for 115.0.2esr
Comment 16•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 17•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 18•2 years ago
|
||
| uplift | ||
Comment 19•2 years ago
|
||
This issue is verified as fixed in our latest 115.0.2 and 115.0.2esr builds.
Description
•