Bug 1841982 - Only mark packets as EOF if the stream size is known in the MP3TrackDemuxer. r=media-playback-reviewers,chunmin

Differential Revision: https://phabricator.services.mozilla.com/D182899